Bug 266870 - .desktop files do not display icon on plasma-desktop
Summary: .desktop files do not display icon on plasma-desktop
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-misc (other bugs)
Version First Reported In: 4.8.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-22 08:37 UTC by Pascal d'Hermilly
Modified: 2012-06-20 09:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
Screen-shot showing only "exe"-Icon for "My Files", "Trash" and a program. (4.07 KB, image/png)
2012-06-08 16:13 UTC, h.goebel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2011-02-22 08:37:55 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

I've created a link to a url with Dolphin. I've also set a custom icon.
When I drag it to plasma desktop the icon becomes a gear instead of the custom.


Reproducible: Didn't try

Steps to Reproduce:
create a link to a url with Dolphin (right click ->create new ->Link URL).
Set a custom icon.
Drag to plasma-desktop

Actual Results:  
the link icon becomes a gear instead of the custom.

Expected Results:  
The link should have the same icon
Comment 1 Kai Uwe Broulik 2011-03-03 12:57:32 UTC
This is - I think - because Plasma doesn‘t actually use the .desktop file but the file directly? Don‘t know for sure.
What I encountered that when dragging a Windows .exe file (Delphi32.exe development environment for example) to my plasma desktop, it also got the gear default icon but when renaming that file, i.e. to Delphi 32 or something resulted in the ORIGINAL file being renamed. Plasma should just rely on .desktop files for icons.
Comment 2 Beat Wolf 2011-04-05 23:20:32 UTC
There should be a duplicate of this bug somewhere
Comment 3 Myriam Schweingruber 2012-05-22 20:59:50 UTC
Is this still valid for KDE 4.8.3 or trunk?
Comment 4 Pascal d'Hermilly 2012-05-23 07:45:57 UTC
I can confirm that the bug is valid for 4.8.2
Comment 5 Myriam Schweingruber 2012-05-23 09:16:55 UTC
Thank you for the fast feedback.
Comment 6 h.goebel 2012-06-08 13:15:23 UTC
I can confirm this for 4.8.2. Icons in .desktops file are completly ignored, no matter if the desptop file describes  programms or folders.

This is really nasty!
Comment 7 h.goebel 2012-06-08 16:13:47 UTC
Created attachment 71671 [details]
Screen-shot showing only "exe"-Icon for "My Files", "Trash" and a program.
Comment 8 Gregor Tätzner 2012-06-19 18:57:04 UTC
Git commit 88627b1f9eaa778b80aaf6cd6bd5f4026b5fade0 by Gregor Tätzner.
Committed on 19/06/2012 at 20:51.
Pushed by gregort into branch 'master'.

icon applet: Fix drag and drop of desktop files.

Use KFileItem instead of KDesktopFile to handle desktop files without
suffix.
REVIEW: 104764

M  +4    -1    plasma/generic/applets/icon/icon.cpp

http://commits.kde.org/kde-workspace/88627b1f9eaa778b80aaf6cd6bd5f4026b5fade0
Comment 9 Myriam Schweingruber 2012-06-20 09:38:29 UTC
(In reply to comment #8)
> Git commit 88627b1f9eaa778b80aaf6cd6bd5f4026b5fade0 by Gregor Tätzner.
> Committed on 19/06/2012 at 20:51.
> Pushed by gregort into branch 'master'.
> 
> icon applet: Fix drag and drop of desktop files.
> 
> Use KFileItem instead of KDesktopFile to handle desktop files without
> suffix.
> REVIEW: 104764
> 
> M  +4    -1    plasma/generic/applets/icon/icon.cpp
> 
> http://commits.kde.org/kde-workspace/88627b1f9eaa778b80aaf6cd6bd5f4026b5fade0

Great, thank you :=) Please also use the commit hook "FIXED-IN:" so the field is set.