icon applet: Fix drag and drop of desktop files.

Use KFileItem instead of KDesktopFile to handle desktop files without
suffix.
BUG: 266870
REVIEW: 104764